--- a/collections/ansible_collections/jaredhocutt/homelab/roles/backrest/templates/backrest.service.j2
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/backrest/templates/backrest.service.j2
@@ -7,7 +7,7 @@ Type=simple
 User={{ backrest_user }}
 Group={{ backrest_group }}
 ExecStart={{ backrest_bin_path }}
-{% for key, value in (common_container_env_defaults | combine(backrest_env_vars_base, recursive=True) | combine(backrest_env_vars, recursive=True)).items() %}
+{% for key, value in (common_container_env_defaults | combine(backrest_container_env_defaults, recursive=True) | combine(backrest_container_env, recursive=True)).items() %}
 Environment="{{ key }}={{ value }}"
 {% endfor %}
 
