--- a/collections/ansible_collections/jaredhocutt/homelab/roles/backrest/templates/traefik.yaml.j2
+++ b/collections/ansible_collections/jaredhocutt/homelab/roles/backrest/templates/traefik.yaml.j2
@@ -9,4 +9,4 @@ http:
     {{ backrest_name }}:
       loadBalancer:
         servers:
-          - url: "http://host.containers.internal:{{ (backrest_env_vars_base | combine(backrest_env_vars, recursive=True)).BACKREST_PORT | ansible.builtin.split(':') | last }}"
+          - url: "http://host.containers.internal:{{ (backrest_container_env_defaults | combine(backrest_container_env, recursive=True)).BACKREST_PORT | ansible.builtin.split(':') | last }}"
